--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,13 @@
 annotated-types==0.7.0
 asgiref==3.8.1
-cffi==1.17.1
-click==8.1.8
-colorama==0.4.6
-contextlib2==21.6.0
-cryptography==44.0.1
-Django==5.1.6
+django==5.1.6
 django-cors-headers==4.7.0
 django-extensions==3.2.3
 django-ninja==1.3.0
 dnspython==2.7.0
-email_validator==2.2.0
-gunicorn==23.0.0
-h11==0.14.0
+email-validator==2.2.0
 idna==3.10
-injector==0.22.0
-packaging==24.2
-pycparser==2.22
 pydantic==2.10.6
-pydantic_core==2.27.2
-PyJWT==2.10.1
+pydantic-core==2.27.2
 sqlparse==0.5.3
-typing_extensions==4.12.2
-tzdata==2025.1
-uvicorn==0.34.0
+typing-extensions==4.12.2
