--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,7 @@ dependencies = [
     "django-cors-headers>=4.7.0",
     "django-extensions>=3.2.3",
     "django-ninja>=1.3.0",
+    "gunicorn>=23.0.0",
     "pydantic[email]>=2.10.6",
+    "uvicorn>=0.34.0",
 ]
