--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 annotated-types==0.7.0
 asgiref==3.8.1
+click==8.1.8
 django==5.1.6
 django-cors-headers==4.7.0
 django-extensions==3.2.3
 django-ninja==1.3.0
 dnspython==2.7.0
 email-validator==2.2.0
+gunicorn==23.0.0
+h11==0.14.0
 idna==3.10
+packaging==24.2
 pydantic==2.10.6
 pydantic-core==2.27.2
 sqlparse==0.5.3
 typing-extensions==4.12.2
+uvicorn==0.34.0
