--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "django-extensions>=3.2.3",
     "django-ninja>=1.3.0",
     "gunicorn>=23.0.0",
+    "psycopg[binary]>=3.2.5",
     "pydantic[email]>=2.10.6",
     "uvicorn>=0.34.0",
 ]
