--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,6 @@ dependencies = [
     "gunicorn>=23.0.0",
     "psycopg[binary]>=3.2.5",
     "pydantic[email]>=2.10.6",
+    "python-dotenv>=1.0.1",
     "uvicorn>=0.34.0",
 ]
