--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ psycopg==3.2.5
 psycopg-binary==3.2.5
 pydantic==2.10.6
 pydantic-core==2.27.2
+python-dotenv==1.0.1
 sqlparse==0.5.3
 typing-extensions==4.12.2
 uvicorn==0.34.0
