--- a/.github/workflows/depley.yaml
+++ b/.github/workflows/depley.yaml
@@ -16,7 +16,7 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: root
-          key: ${{ secrets.Key }}
+          key: ${{ secrets.KEY }}
           script: |
             cd ~/WebPreview/api
             git pull
