--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 annotated-types==0.7.0
 asgiref==3.8.1
-click==8.1.8
 django==5.1.6
 django-cors-headers==4.7.0
 django-extensions==3.2.3
 django-ninja==1.3.0
 dnspython==2.7.0
 email-validator==2.2.0
+gevent==24.11.1
+greenlet==3.1.1
 gunicorn==23.0.0
-h11==0.14.0
 idna==3.10
 packaging==24.2
 psycopg==3.2.5
@@ -16,6 +16,8 @@ psycopg-binary==3.2.5
 pydantic==2.10.6
 pydantic-core==2.27.2
 python-dotenv==1.0.1
+setuptools==75.9.1
 sqlparse==0.5.3
 typing-extensions==4.12.2
-uvicorn==0.34.0
+zope-event==5.0
+zope-interface==7.2
