--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ dependencies = [
     "django-cors-headers>=4.7.0",
     "django-extensions>=3.2.3",
     "django-ninja>=1.3.0",
-    "gevent>=24.11.1",
     "gunicorn>=23.0.0",
     "psycopg[binary]>=3.2.5",
     "pydantic[email]>=2.10.6",
     "python-dotenv>=1.0.1",
+    "uvicorn>=0.34.0",
 ]
