--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,6 @@ dependencies = [
     "pydantic[email]>=2.10.6",
     "python-dotenv>=1.0.1",
     "uvicorn>=0.34.0",
+    "django-redis>=5.4.0",
+    "redis>=5.0.1",
 ]
