--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django==5.1.6
 django-cors-headers==4.7.0
 django-extensions==3.2.3
 django-ninja==1.3.0
+django-redis==5.4.0
 dnspython==2.7.0
 email-validator==2.2.0
 gunicorn==23.0.0
@@ -16,6 +17,7 @@ psycopg-binary==3.2.5
 pydantic==2.10.6
 pydantic-core==2.27.2
 python-dotenv==1.0.1
+redis==5.2.1
 sqlparse==0.5.3
 typing-extensions==4.12.2
 uvicorn==0.34.0
