--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
 annotated-types==0.7.0
 asgiref==3.8.1
-click==8.1.8
-django==5.1.6
+click==8.2.1
+django==5.2.3
 django-cors-headers==4.7.0
-django-extensions==3.2.3
-django-ninja==1.3.0
+django-extensions==4.1
+django-ninja==1.4.3
 django-redis==5.4.0
 dnspython==2.7.0
 email-validator==2.2.0
 gunicorn==23.0.0
-h11==0.14.0
+h11==0.16.0
 idna==3.10
-packaging==24.2
-psycopg==3.2.5
-psycopg-binary==3.2.5
-pydantic==2.10.6
-pydantic-core==2.27.2
-python-dotenv==1.0.1
-redis==5.2.1
+packaging==25.0
+psycopg==3.2.9
+psycopg-binary==3.2.9
+pydantic==2.11.7
+pydantic-core==2.33.2
+python-dotenv==1.1.0
+redis==6.2.0
 sqlparse==0.5.3
-typing-extensions==4.12.2
-uvicorn==0.34.0
+typing-extensions==4.14.0
+typing-inspection==0.4.1
+uvicorn==0.34.3
