--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,10 @@ dependencies = [
     "psycopg[binary]>=3.2.5",
     "pydantic[email]>=2.10.6",
     "python-dotenv>=1.0.1",
-    "uvicorn>=0.34.0",
+    "uvicorn[standard]>=0.34.0",
     "django-redis>=5.4.0",
     "redis>=5.0.1",
+    "channels>=4.2.2",
+    "channels-redis>=4.2.1",
+    "daphne>=4.2.1",
 ]
