--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
 annotated-types==0.7.0
+anyio==4.9.0
 asgiref==3.9.1
+attrs==25.3.0
+autobahn==24.4.2
+automat==25.4.16
+cffi==1.17.1
+channels==4.2.2
+channels-redis==4.2.1
 click==8.2.1
+constantly==23.10.4
+cryptography==45.0.5
+daphne==4.2.1
 django==5.2.4
 django-cors-headers==4.7.0
 django-extensions==4.1
@@ -10,15 +20,33 @@ dnspython==2.7.0
 email-validator==2.2.0
 gunicorn==23.0.0
 h11==0.16.0
+httptools==0.6.4
+hyperlink==21.0.0
 idna==3.10
+incremental==24.7.2
+msgpack==1.1.1
 packaging==25.0
 psycopg==3.2.9
 psycopg-binary==3.2.9
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
+pycparser==2.22
 pydantic==2.11.7
 pydantic-core==2.33.2
+pyopenssl==25.1.0
 python-dotenv==1.1.1
+pyyaml==6.0.2
 redis==6.2.0
+service-identity==24.2.0
+setuptools==80.9.0
+sniffio==1.3.1
 sqlparse==0.5.3
+twisted==25.5.0
+txaio==25.6.1
 typing-extensions==4.14.1
 typing-inspection==0.4.1
 uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
+zope-interface==7.2
